sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:11: error: ')' expected but '}' found.
		}
                ^AlgInsertionSort:17: error: Unmatched closing brace '}' ignored here
}
^